--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Fitkin ToDo is a RESTful API for projects, tasks, and users",
   "main": "dist",
   "scripts": {
-    "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-0\"",
-    "build": "babel src -s -D -d dist --presets es2015,stage-0",
-    "start": "node dist",
-    "prestart": "npm run -s build",
+    "dev": "NODE_ENV=dev nodemon -w src --exec \"babel-node src --presets es2015,stage-0\"",
+    "build": "NODE_ENV=prod babel src -s -D -d dist --presets es2015,stage-0",
+    "start": "NODE_ENV=prod node dist",
+    "prestart": "NODE_ENV=prod npm run -s build",
     "lint": "eslint src",
     "test": "cross-env NODE_ENV=test ./node_modules/mocha/bin/mocha --compilers js:babel-core/register --recursive --exit"
   },
